[tool.poetry]
name = "train-bot"
version = "1.0.0"
description = ""
authors = ["Riccardo Albertazzi <piano.vergato@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"

click = "^8.0.3"
requests = "^2.27.1"
rich = "^11.0.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^6.2.5"
types-requests = "^2.27.7"

[tool.poetry.scripts]
train-cli="train_bot.cli:main"

[tool.black]
line-length = 100
exclude = '''
(
    \.DS_Store |
    \.githooks |
    \.html$ |
    \.idea |
    \.json$ |
    \.pyc$ |
    \.sql$ |
    \.vscode |
    \.venv |
    node_modules
)
'''

[tool.isort]
line_length = 100
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
